--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <title>Constructor</title>
     <link rel="stylesheet" href="styles.css" />
-
+	<script defer src="mainJS.js"></script>
 </head>
 <body>
-
-<script src="mainJS.js"></script>
+    
 </body>
 </html>
