--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Constructor</title>
-    <link rel="stylesheet" href="styles.css" />
-	<script defer src="mainJS.js"></script>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Constructor</title>
+        <link rel="stylesheet" href="styles.css" />
+        <script defer src="mainJS.js"></script>
+    </head>
+    <body>
+        <form action="#" method="post">
+                <label for="username">User name</label>
+                <input type="text" name="username" id="username" required placeholder="User name" />
+                <label for="email">E-mail </label>
+                <input type="email" name="email" id="email" required placeholder="E-mail" />
+                <button type="submit">Submit</button>
+        </form>
+    </body>
 </html>
