--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Constructor</title>
-        <link rel="stylesheet" href="styles.css" />
-        <script defer src="mainJS.js"></script>
-    </head>
-    <body>
-        <form action="#" method="post">
-                <label for="username">User name</label>
-                <input type="text" name="username" id="username" required placeholder="User name" />
-                <label for="email">E-mail </label>
-                <input type="email" name="email" id="email" required placeholder="E-mail" />
-                <button type="submit">Submit</button>
-        </form>
-    </body>
+<head>
+	<meta charset="UTF-8"/>
+	<title>Constructor</title>
+	<link rel="stylesheet" href="styles.css"/>
+	<script defer src="mainJS.js"></script>
+</head>
+<body>
+<form action="#" method="post" enctype="multipart/form-data">
+	<label for="username">User name</label>
+	<input type="text" name="username" id="username" placeholder="User name" required/>
+	<label for="email">E-mail</label>
+	<input type="email" name="email" id="email" placeholder="E-mail" required/>
+	<label for="telephone">Telephone</label><input type="tel" name="telephone" id="telephone">
+	<label for="date">Date</label><input type="date" name="date" id="date" placeholder="Date" required/>
+	<label for="male">Male</label><input type="radio" name="gender" id="male" value="male">
+	<label for="female">Female</label><input type="radio" name="gender" id="female" value="female">
+	<label for="pet">Your pet:</label>
+	<select name="pet" id="pet" multiple>
+		<option value="cat">Cat</option>
+		<option value="dog">Dog</option>
+		<option value="hamster">Hamster</option>
+	</select>
+	<label for="color">Color</label><input type="color" name="color" id="color">
+	<label for="file">Your photo</label>
+	<input type="file" name="file" id="file">
+	<button type="submit">Submit</button>
+</form>
+</body>
 </html>
