--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<input type="text" name="username" id="username" placeholder="User name" required/>
 	<label for="email">E-mail</label>
 	<input type="email" name="email" id="email" placeholder="E-mail" required/>
-	<label for="telephone">Telephone</label><input type="tel" name="telephone" id="telephone">
+	<label for="telephone">Telephone</label><input type="tel" name="telephone" id="telephone" placeholder="+1 234 567-89-01">
 	<label for="date">Date</label><input type="date" name="date" id="date" placeholder="Date" required/>
 	<label for="male">Male</label><input type="radio" name="gender" id="male" value="male">
 	<label for="female">Female</label><input type="radio" name="gender" id="female" value="female">
