--- a/index.html
+++ b/index.html
@@ -3,29 +3,15 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>Constructor</title>
-	<link rel="stylesheet" href="styles.css"/>
-	<script defer src="mainJS.js"></script>
+	<link rel="stylesheet" href="css/styles.css"/>
+	<script defer src="js/mainJS.js"></script>
 </head>
 <body>
+<header class="color-gray2">GitHub User Finder</header>
 <form action="#" method="post" enctype="multipart/form-data">
-	<label for="username">User name</label>
-	<input type="text" name="username" id="username" placeholder="User name" required/>
-	<label for="email">E-mail</label>
-	<input type="email" name="email" id="email" placeholder="E-mail" required/>
-	<label for="telephone">Telephone</label><input type="tel" name="telephone" id="telephone" placeholder="+1 234 567-89-01">
-	<label for="date">Date</label><input type="date" name="date" id="date" placeholder="Date" required/>
-	<label for="male">Male</label><input type="radio" name="gender" id="male" value="male">
-	<label for="female">Female</label><input type="radio" name="gender" id="female" value="female">
-	<label for="pet">Your pet:</label>
-	<select name="pet" id="pet" multiple>
-		<option value="cat">Cat</option>
-		<option value="dog">Dog</option>
-		<option value="hamster">Hamster</option>
-	</select>
-	<label for="color">Color</label><input type="color" name="color" id="color">
-	<label for="file">Your photo</label>
-	<input type="file" name="file" id="file">
-	<button type="submit">Submit</button>
+	<label class="border-radius color-gray1" for="UserName">User name</label>
+	<input class="border-radius color-gray1" type="text" name="UserName" id="UserName" placeholder="User name" required/>
+	<button class="border-radius color-gray1" type="submit">Submit</button>
 </form>
 </body>
 </html>
