Complete a function to remove an element.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <form action="#" method="post" enctype="multipart/form-data">
 	<label class="border-radius color-gray1" for="UserName">User name</label>
 	<input class="border-radius color-gray1" type="text" name="UserName" id="UserName" placeholder="User name" required/>
-	<button class="border-radius color-gray1" type="submit">Submit</button>
+	<button class="border-radius color-gray1" type="submit">Find user</button>
 </form>
 </body>
 </html>
